[gd_scene load_steps=12 format=3 uid="uid://dypev0qrj3e6s"]

[ext_resource type="Texture2D" uid="uid://c7k0g4h5xyth2" path="res://assets/sprites/atlas.png" id="1_5m8k5"]
[ext_resource type="Script" uid="uid://cgsi2m0cxq4ra" path="res://scripts/coin.gd" id="1_606fa"]
[ext_resource type="AudioStream" uid="uid://duscj6njpiw6a" path="res://assets/audio/sfx/gem.wav" id="3_hfxuq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_341ky"]
size = Vector2(10, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_11l1o"]
atlas = ExtResource("1_5m8k5")
region = Rect2(0, 336, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_d14el"]
atlas = ExtResource("1_5m8k5")
region = Rect2(16, 336, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ikuy"]
atlas = ExtResource("1_5m8k5")
region = Rect2(32, 336, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnlwo"]
atlas = ExtResource("1_5m8k5")
region = Rect2(48, 336, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_jig8b"]
atlas = ExtResource("1_5m8k5")
region = Rect2(64, 336, 16, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmuha"]
atlas = ExtResource("1_5m8k5")
region = Rect2(80, 336, 16, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhs42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11l1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d14el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ikuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnlwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jig8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmuha")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Coin" type="Area2D"]
script = ExtResource("1_606fa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_341ky")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bhs42")

[node name="CollectedSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hfxuq")

[node name="CollectionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.6
one_shot = true
explosiveness = 0.8
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
gravity = Vector2(0, 200)
initial_velocity_min = 80.0
initial_velocity_max = 120.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(1, 0.85, 0.2, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CollectedSfx" to="." method="_on_collected_sfx_finished"]
